--- a/styles/seats.css
+++ b/styles/seats.css
@@ -3,14 +3,13 @@
 }
 
 body {
-  background-color: #242333;
-  color: #fff;
+  background-color: #11101f;
+  color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  font-family: sans-serif;
   margin: 0;
 }
 
@@ -107,5 +106,5 @@ p.text {
 }
 
 p.text span {
-  color: #6feaf6;
+  color: #0cd1b4;
 }
