--- a/styles/signup.css
+++ b/styles/signup.css
@@ -2,7 +2,7 @@ body {
   background-image: url("https://inc42.com/wp-content/uploads/2021/06/F4-Feature-1.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100vh;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 #formContainer {
